--- a/TODO
+++ b/TODO
@@ -16,12 +16,12 @@ Atheme Web 1.0 (coincides with Atheme 5.0 release!)
   [ ] registration module
   [ ] vital information editor
   [?] password recovery module
-  [?] HostServ:Request integration
+  [X] HostServ:Request integration
 [x] Example mod_wsgi config for Apache deployment
 
 Atheme Web 1.1 (Atheme 5.1)
 
 [ ] ChanServ
   [ ] edit channel metadata (url, entrymsg)
-[ ] OperServ
-  [ ] akill information module
+[X] OperServ
+  [X] akill information module
