--- a/TODO
+++ b/TODO
@@ -13,7 +13,7 @@ Atheme Web 1.0 (coincides with Atheme 5.0 release!)
   [x] view channel information (founder, successor, metadata, etc)
   [x] edit channel booleans
 [ ] NickServ
-  [ ] registration module
+  [x] registration module
   [ ] vital information editor
   [?] password recovery module
   [X] HostServ:Request integration
